Fixed bug #26194 (iconv() not properly defined with libiconv). # Thank you Steph and Frank!