ext/iconv/iconv.c
@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: iconv.c,v 1.97 2003/11/02 18:54:08 moriyoshi Exp $ */
+/* $Id: iconv.c,v 1.98 2003/11/22 13:36:55 moriyoshi Exp $ */
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
@@ -49,6 +49,10 @@
 
 #ifdef HAVE_GLIBC_ICONV
 #include <gnu/libc-version.h>
+#endif
+
+#ifdef HAVE_LIBICONV
+#undef iconv
 #endif
 
 #include "ext/standard/php_smart_str.h"
@@ -116,6 +120,10 @@ typedef enum _php_iconv_enc_scheme_t {
 	PHP_ICONV_ENC_SCHEME_QPRINT
 } php_iconv_enc_scheme_t;
 /* }}} */
+
+#ifdef HAVE_LIBICONV
+#define iconv libiconv
+#endif
 
 /* {{{ prototypes */ 
 static php_iconv_err_t _php_iconv_appendl(smart_str *d, const char *s, size_t l, iconv_t cd);
